set fixed height for profile items to prevent white space when names wrap
fixes #233

--- a/src/scss/components/_roster.scss
+++ b/src/scss/components/_roster.scss
@@ -5,6 +5,7 @@
 
 .roster__item {
   @include make-gutters;
+  height: 450px;
   float: left;
   width: 50%;
 }
